Fix navbar menu on mobile
Fixing navbar menu on mobile in WordPress version

--- a/test_wp/wp-content/themes/intersog/css/main.css
+++ b/test_wp/wp-content/themes/intersog/css/main.css
@@ -187,65 +187,99 @@ header {
 		background: url(../img/menu-arrow.png) 70px 10px no-repeat !important;
 	}
 
-			#menu-item-106.active-custom {
-				background: url(../img/menu-arrow-active.png) 80px 10px no-repeat !important;
-			}
+		#menu-item-106.active-custom {
+			background: url(../img/menu-arrow-active.png) 80px 10px no-repeat !important;
+		}
 
-			#menu-item-107.active-custom {
-				background: url(../img/menu-arrow-active.png) 70px 10px no-repeat !important;
-			}
+		#menu-item-107.active-custom {
+			background: url(../img/menu-arrow-active.png) 70px 10px no-repeat !important;
+		}
 
-			.navbar-nav li.current_page_item a,
-			.navbar-nav li.current_page_item a:hover,
-			.navbar-nav li.current_page_item a:focus {
+		.navbar-nav li.current_page_item a,
+		.navbar-nav li.current_page_item a:hover,
+		.navbar-nav li.current_page_item a:focus {
+			text-decoration: none;
+			color: #069bdc;
+			background: none;
+		}
+
+		.navbar-nav .menu-item-type-custom a {
+			text-decoration: none;
+			color: #000e4c;
+			background: none;
+		}
+
+			.navbar-nav .menu-item-type-custom a:hover,
+			.navbar-nav .menu-item-type-custom a:focus {
 				text-decoration: none;
-				color: #069bdc !important;
+				color: #069bdc;
 				background: none;
 			}
 
-			.navbar-nav .menu-item-type-custom a {
-				text-decoration: none;
-				color: #000e4c;
-				background: none;
+			.sub-menu {
+				visibility: hidden;
+				width: 0;
 			}
 
+				.menu-item-type-custom.active-custom .sub-menu {
+					visibility: visible;
+					display: block;
+					position: absolute;
+					width: 110px;
+					top: 25px;
+					left: 0;
+					background: #fff;
+					overflow: hidden;
+				}
 
+				.sub-menu li {
+					padding: 2px 10px;
+				}
 
-				.navbar-nav .menu-item-type-custom a:hover,
-				.navbar-nav .menu-item-type-custom a:focus {
+			.sub-menu > li > a {
+				display: block;
+				margin: 0;
+				padding: 0;
+				font: 400 14px 'Open Sans';
+				line-height: 24px;
+				color: #133866;
+				text-decoration: none;
+			}
+
+			#menu-item-87 {
+				margin-left: 15px;
+			}
+
+			#menu-item-88 {
+				border-left: 1px solid #d7d7d7;
+			}
+
+			#menu-item-106 > a,
+			#menu-item-107 > a {
+				display: block;
+				margin: 0;
+				padding: 0;
+				padding-right: 15px;
+				font: 600 14px 'Open Sans';
+				line-height: 24px;
+				color: #133866;
+				text-decoration: none;
+			}
+
+				#menu-item-106 > a:hover,
+				#menu-item-107 > a:hover {
 					text-decoration: none;
 					color: #069bdc;
 					background: none;
 				}
 
-				.sub-menu {
-					visibility: hidden;
-				}
+			#menu-item-106.active-custom > a {
+				color: #069bdc;
+			}
 
-					.menu-item-type-custom.active-custom .sub-menu {
-						visibility: visible;
-						display: block;
-						position: relative;
-						top: 0;
-						background: #fff;
-						overflow: hidden;
-					}
-
-					.sub-menu li {
-						padding: 2px 10px;
-					}
-
-				.sub-menu > li > a {
-					display: block;
-					margin: 0;
-					padding: 0;
-					font: 400 14px 'Open Sans';
-					line-height: 16px;
-					color: #133866;
-					text-decoration: none;
-				}
-
-
+			#menu-item-107.active-custom > a {
+				color: #069bdc;
+			}
 
 			.navbar-nav > .open > a,
 			.navbar-nav > .open > a:hover,
@@ -258,7 +292,7 @@ header {
 		.navbar-nav > li.menu-right {
 			float: left;
 			display: block;
-			margin-left: 10px;
+			margin-left: 15px;
 		}
 
 			.navbar-nav > li > .dropdown-menu {
@@ -269,17 +303,6 @@ header {
 			padding-right: 0;
 			margin-right: 0;
 		}
-
-		.vertical-line {
-			float: left;
-			display: block;
-			height: 24px;
-			width: 1px !important;
-			padding: 0;
-			margin: 0;
-			background: #d7d7d7;
-		}
-
 
 
 .navbar-toggle {
